# deepgram-medical-transcription

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json  streamlit_app.py
.claude/: settings.json
.claude/hooks/: block-secrets.sh  py-checks.sh  pytest-on-stop.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
api/: __init__.py  auth.py  main.py  schemas.py  settings.py
docs/plans/: 2026-06-12-fastapi-service-design.md
nova/: __init__.py  config.py  results.py  subtitles.py  transcribe.py
static/: FONTS.md
tests/: conftest.py  helpers.py  test_api.py  test_ci_workflow.py  test_dependabot.py  test_hooks.py  test_license.py  test_release_workflow.py  test_results.py  test_streamlit_app.py  test_subtitles.py  test_transcribe.py
