[project]
name = "deepgram-medical-transcription"
version = "0.4.0"
description = "Transcribe medical audio with the Deepgram Nova-3 Medical model — a Streamlit UI and a FastAPI service over a shared core."
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk==7.3.0",
    "fastapi==0.136.3",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.32",
    "streamlit==1.58.0",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.0",
    "ruff==0.15.17",
    "ty==0.0.49",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is enforced by `ruff format`; the remaining long lines are
# intentional comments / test assertions the formatter chose not to wrap.
ignore = ["E501"]

[tool.ruff.lint.isort]
# Keep aliased re-exports in one parenthesized block instead of splitting them.
combine-as-imports = true

[tool.ruff.lint.flake8-bugbear]
# FastAPI's File()/Form()/Depends() in argument defaults are framework idiom, not B008 bugs.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]
