[project]
name = "deepgram-medical-transcription"
version = "0.8.0"
description = "Streamlit application for medical transcription using Deepgram Nova."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk==7.3.1",
    "python-dotenv==1.2.2",
    "streamlit==1.58.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pyyaml==6.0.2",
    "ruff==0.15.19",
    "ty==0.0.53",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is enforced by `ruff format`; the remaining long lines are
# intentional comments / test assertions the formatter chose not to wrap.
ignore = ["E501"]

[tool.ruff.lint.isort]
# Keep aliased re-exports in one parenthesized block instead of splitting them.
combine-as-imports = true
